...

                    ProgressView(value: Double(progress), total: Double(totalPages))
                        .padding()
                }
                    
                NavigationLink(destination: ReaderView(book: book, epubFile: book.epubFile ?? "")){
                    Text("Czytaj")
                        .font(.headline)
                        .foregroundColor(.white)
                        .padding()
                        .frame(maxWidth: .infinity)
                        .background(Color.blue)
                        .cornerRadius(10)
...
                        .foregroundColor(.white)
                        .padding()
                        .frame(maxWidth: .infinity)
                        .background(Color.blue)
                        .cornerRadius(10)
                }
                .accessibilityIdentifier("rentBook")
                .padding(.horizontal)
            }

            Spacer()
        }
        .padding()
...
