...
                            Image(systemName: "chevron.right")
                                .foregroundColor(.white)
                                .padding()
                                .background(Color.blue)
                                .cornerRadius(10)
                        }
                        .accessibilityIdentifier("nextPageButton")
                        .disabled(currentPage+1 == 0)
                    }
                    .padding(.horizontal)
                    

                }
...
