...
    """
    As the astronaut floated through the endless void, thoughts of home became increasingly distant. Would they ever return...
    """
]

enum Genre: String, CaseIterable, Identifiable {
    case fantasy = "Fantasy" // 1
    case scienceFiction = "Science Fiction" // 2
    case technical = "Literatura techniczna" // 3
    
    var id: String { self.rawValue }
}

...
